--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/csg": "^3.2.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "@studio-freight/react-lenis": "^0.0.47",
     "gsap": "^3.12.5",
     "lil-gui": "^0.19.2",
     "next": "14.2.3",
