--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-three/csg": "^3.2.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/rapier": "^1.3.1",
     "@studio-freight/react-lenis": "^0.0.47",
     "gsap": "^3.12.5",
     "lil-gui": "^0.19.2",
